--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>videotest</title>
   </head>
   <body>
+  <script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
+  <script type="text/javascript">
+    console.log(returnCitySN["cip"]);
+  </script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
